@@ -5,6 +5,7 @@ pipeline {
 
     environment {
         SERVER_ID = 'jfrog_java'
+         MAVEN_OPTS = "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
     }
 
     triggers {
@@ -43,7 +44,6 @@ pipeline {
         stage('Upload to JFrog Artifactory') {
             steps {
                 script {
-                    sh 'ls -l target/*.jar || echo "NO JAR found in target"'
                     def server = Artifactory.server(SERVER_ID)
                     def buildInfo = Artifactory.newBuildInfo()
 
